# keyboard-cleaner

./: .clangd  .gitmodules  CMakeLists.txt  README.md  setup.bat  setup.sh
include/log.c/: log.h
resources/: icon-win.rc  icon.icns  unix.qrc  win.qrc
src/: cli.c  config.h  config.hpp  main.c  main.cpp  os_specific.cpp  service.c  service.cpp  service.hpp  tray.c  tray.cpp  tray.hpp
src/service/: block_keyboard.cpp  block_keyboard.hpp  os_specific.cpp  os_specific.hpp  pipe_reader.cpp  pipe_reader.hpp  service.c  service.cpp  service.hpp
src/tray/: command_runner.cpp  command_runner.hpp  main.cpp  pipe-writer.cpp  pipe-writer.hpp  pipe_writer.cpp  pipe_writer.hpp  tray.cpp  tray.hpp
